# alfred-urbandictionary

./: README.md  Urban Dictionary.alfredworkflow  info.plist  pyproject.toml  workflow_src.py
.github/workflows/: alfred_release.yml
