[tool.poetry]
name = "alfred-urbandictionary"
version = "0.1.0"
description = ""
authors = ["Evgeniy Shubin <com30n@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "alfred_urbandictionary"}]

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

